Update lists at 20250321-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -104,7 +104,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.172.84.107;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
@@ -125,6 +124,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 116.101.242.34;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
@@ -194,6 +194,8 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 171.25.193.20;
+allow 171.25.193.235;
 allow 172.104.101.207;
 allow 172.104.142.74;
 allow 172.104.182.84;
@@ -276,7 +278,6 @@ allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
-allow 185.126.115.146;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -666,7 +667,6 @@ allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -741,6 +741,8 @@ allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
+allow 2001:67c:289c::20;
+allow 2001:67c:289c:2::235;
 allow 2001:67c:6ec:203:192:42:116:173;
 allow 2001:67c:6ec:203:192:42:116:174;
 allow 2001:67c:6ec:203:192:42:116:175;
@@ -967,9 +969,6 @@ allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
-allow 23.154.177.18;
-allow 23.154.177.19;
-allow 23.154.177.20;
 allow 23.154.177.21;
 allow 23.154.177.22;
 allow 23.154.177.23;
@@ -981,7 +980,6 @@ allow 23.154.177.28;
 allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
-allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -992,7 +990,9 @@ allow 23.191.200.14;
 allow 23.191.200.15;
 allow 23.191.200.16;
 allow 23.191.200.17;
+allow 23.191.200.19;
 allow 23.191.200.2;
+allow 23.191.200.20;
 allow 23.191.200.3;
 allow 23.191.200.4;
 allow 23.191.200.5;
@@ -1013,6 +1013,7 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
+allow 2402:800:6172:b267:5c0e:cc57:b95f:cd76;
 allow 2407:3640:2207:8882::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1033,7 +1034,6 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:f704:10::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fa8a:3:a::a;
@@ -1324,6 +1324,7 @@ allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
@@ -1640,11 +1641,9 @@ allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
-allow 2a10:1fc0:10::ce18:9bf9;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:a800:1:1:194:26:192:77;
 allow 2a12:a800:1:1:2:58:56:220;
 allow 2a12:a800:1:1:2:58:56:233;
@@ -1845,7 +1844,9 @@ allow 5.255.104.202;
 allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
+allow 5.255.118.218;
 allow 5.255.121.71;
+allow 5.255.123.121;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.125.196;
@@ -1882,7 +1883,6 @@ allow 66.78.40.182;
 allow 66.78.40.73;
 allow 67.219.109.141;
 allow 71.19.144.106;
-allow 71.210.81.50;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
@@ -1918,7 +1918,6 @@ allow 84.239.46.144;
 allow 84.247.183.128;
 allow 84.252.120.131;
 allow 85.239.41.130;
-allow 85.239.55.172;
 allow 85.93.218.204;
 allow 86.107.101.115;
 allow 86.107.101.122;
