--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -104,6 +104,7 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
+set_real_ip_from 109.172.84.107;
 set_real_ip_from 109.199.101.106;
 set_real_ip_from 109.199.101.134;
 set_real_ip_from 109.199.105.142;
@@ -135,6 +136,7 @@ set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
+set_real_ip_from 134.199.173.242;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -151,6 +153,7 @@ set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.73;
 set_real_ip_from 146.103.33.218;
+set_real_ip_from 146.190.251.108;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
@@ -172,6 +175,7 @@ set_real_ip_from 156.229.232.115;
 set_real_ip_from 156.229.232.54;
 set_real_ip_from 156.229.232.98;
 set_real_ip_from 156.229.233.92;
+set_real_ip_from 157.245.206.140;
 set_real_ip_from 158.220.123.219;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 160.119.249.240;
@@ -192,10 +196,17 @@ set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
+set_real_ip_from 164.90.131.37;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.20;
+set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
+set_real_ip_from 171.25.193.25;
+set_real_ip_from 171.25.193.77;
+set_real_ip_from 171.25.193.78;
+set_real_ip_from 171.25.193.79;
+set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.101.207;
 set_real_ip_from 172.104.142.74;
 set_real_ip_from 172.104.182.84;
@@ -224,6 +235,7 @@ set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.65.144.142;
 set_real_ip_from 176.65.144.94;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 178.128.160.54;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -293,6 +305,7 @@ set_real_ip_from 185.129.62.62;
 set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
+set_real_ip_from 185.141.216.22;
 set_real_ip_from 185.14.31.113;
 set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.150.28.13;
@@ -667,6 +680,7 @@ set_real_ip_from 194.163.130.99;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -742,7 +756,13 @@ set_real_ip_from 2001:638:301:f732::150;
 set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
+set_real_ip_from 2001:67c:289c:2::234;
 set_real_ip_from 2001:67c:289c:2::235;
+set_real_ip_from 2001:67c:289c::25;
+set_real_ip_from 2001:67c:289c:4::77;
+set_real_ip_from 2001:67c:289c:4::78;
+set_real_ip_from 2001:67c:289c:4::79;
+set_real_ip_from 2001:67c:289c:4::80;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
@@ -933,6 +953,7 @@ set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.127.231;
+set_real_ip_from 206.81.25.191;
 set_real_ip_from 209.135.168.90;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -969,9 +990,6 @@ set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.151.8.8;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
-set_real_ip_from 23.154.177.21;
-set_real_ip_from 23.154.177.22;
-set_real_ip_from 23.154.177.23;
 set_real_ip_from 23.154.177.24;
 set_real_ip_from 23.154.177.25;
 set_real_ip_from 23.154.177.26;
@@ -980,6 +998,7 @@ set_real_ip_from 23.154.177.28;
 set_real_ip_from 23.154.177.29;
 set_real_ip_from 23.154.177.30;
 set_real_ip_from 23.154.177.31;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
 set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.10;
@@ -990,9 +1009,13 @@ set_real_ip_from 23.191.200.14;
 set_real_ip_from 23.191.200.15;
 set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
+set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
 set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
+set_real_ip_from 23.191.200.21;
+set_real_ip_from 23.191.200.22;
+set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.4;
 set_real_ip_from 23.191.200.5;
@@ -1034,6 +1057,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f704:10::1;
 set_real_ip_from 2602:f9f3:0:2::319;
 set_real_ip_from 2602:fa8a:3:a::a;
@@ -1569,6 +1593,7 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1644,6 +1669,7 @@ set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:233;
@@ -1697,7 +1723,6 @@ set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1711,6 +1736,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 40.160.3.1;
 set_real_ip_from 45.11.183.87;
@@ -1721,6 +1747,7 @@ set_real_ip_from 45.130.60.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1870,18 +1897,22 @@ set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.164.66;
+set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
+set_real_ip_from 64.225.78.62;
+set_real_ip_from 64.227.110.29;
 set_real_ip_from 65.87.7.22;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.78.40.73;
 set_real_ip_from 67.219.109.141;
+set_real_ip_from 68.183.200.189;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
