--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -206,6 +206,7 @@ allow 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
 allow 2605:6400:30:f753:891d:ee77:e97c:741a;
+allow 2605:6400:30:f77f:f41c:2bce:7d61:210b;
 allow 2605:6400:30:f77f:f41c:2bce:7d61:2e06;
 allow 2605:6400:30:f78b::2;
 allow 2605:6400:30:f7c0:8511:b113:ca11:9baa;
@@ -419,7 +420,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -667,7 +667,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
