--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -125,7 +125,6 @@ set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 116.101.242.34;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 121.78.28.166;
@@ -136,7 +135,6 @@ set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
-set_real_ip_from 134.199.173.242;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -153,7 +151,6 @@ set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.73;
 set_real_ip_from 146.103.33.218;
-set_real_ip_from 146.190.251.108;
 set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.59.231.4;
 set_real_ip_from 147.45.116.145;
@@ -164,7 +161,7 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.199.79;
 set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
-set_real_ip_from 153.195.183.146;
+set_real_ip_from 153.195.197.73;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.41.95.1;
@@ -175,7 +172,6 @@ set_real_ip_from 156.229.232.115;
 set_real_ip_from 156.229.232.54;
 set_real_ip_from 156.229.232.98;
 set_real_ip_from 156.229.233.92;
-set_real_ip_from 157.245.206.140;
 set_real_ip_from 158.220.123.219;
 set_real_ip_from 158.69.252.116;
 set_real_ip_from 160.119.249.240;
@@ -196,7 +192,6 @@ set_real_ip_from 162.247.74.7;
 set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
-set_real_ip_from 164.90.131.37;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 171.25.193.20;
@@ -235,7 +230,6 @@ set_real_ip_from 176.65.143.138;
 set_real_ip_from 176.65.144.142;
 set_real_ip_from 176.65.144.94;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 178.128.160.54;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.197.91;
 set_real_ip_from 178.17.170.144;
@@ -953,7 +947,6 @@ set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.127.231;
-set_real_ip_from 206.81.25.191;
 set_real_ip_from 209.135.168.90;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -984,6 +977,7 @@ set_real_ip_from 23.133.204.10;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
@@ -1036,7 +1030,6 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2402:800:6172:b267:5c0e:cc57:b95f:cd76;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
@@ -1067,6 +1060,7 @@ set_real_ip_from 2602:fc24:12:9fef::1;
 set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -1591,6 +1585,7 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1743,6 +1738,7 @@ set_real_ip_from 45.130.60.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1793,7 +1789,6 @@ set_real_ip_from 45.66.35.32;
 set_real_ip_from 45.66.35.33;
 set_real_ip_from 45.66.35.34;
 set_real_ip_from 45.66.35.35;
-set_real_ip_from 45.77.97.91;
 set_real_ip_from 45.78.44.215;
 set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.80.158.205;
@@ -1897,15 +1892,12 @@ set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.2;
 set_real_ip_from 64.190.76.3;
 set_real_ip_from 64.190.76.4;
-set_real_ip_from 64.225.78.62;
-set_real_ip_from 64.227.110.29;
 set_real_ip_from 65.87.7.22;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.182;
 set_real_ip_from 66.78.40.73;
 set_real_ip_from 67.219.109.141;
-set_real_ip_from 68.183.200.189;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
@@ -1992,7 +1984,6 @@ set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
-set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
