--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -832,6 +832,7 @@ allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+allow 20.197.32.76;
 allow 202.182.99.129;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -993,6 +994,7 @@ allow 23.154.177.29;
 allow 23.154.177.30;
 allow 23.154.177.31;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -1058,6 +1060,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
@@ -1715,6 +1718,7 @@ allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1728,7 +1732,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.244;
 allow 40.160.3.1;
 allow 45.11.59.28;
@@ -1984,6 +1987,7 @@ allow 93.123.12.112;
 allow 93.185.165.211;
 allow 93.95.227.37;
 allow 93.95.228.125;
+allow 93.95.228.205;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
