--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -832,6 +832,7 @@ deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+deny 20.197.32.76;
 deny 202.182.99.129;
 deny 204.137.14.104;
 deny 204.137.14.105;
@@ -993,6 +994,7 @@ deny 23.154.177.29;
 deny 23.154.177.30;
 deny 23.154.177.31;
 deny 23.155.8.104;
+deny 23.184.48.13;
 deny 23.184.48.254;
 deny 23.184.48.78;
 deny 23.191.200.10;
@@ -1058,6 +1060,7 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
@@ -1715,6 +1718,7 @@ deny 2a13:d207:0:461::1;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1728,7 +1732,6 @@ deny 37.228.129.63;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.242.254.131;
 deny 38.97.116.244;
 deny 40.160.3.1;
 deny 45.11.59.28;
@@ -1984,6 +1987,7 @@ deny 93.123.12.112;
 deny 93.185.165.211;
 deny 93.95.227.37;
 deny 93.95.228.125;
+deny 93.95.228.205;
 deny 93.95.231.14;
 deny 93.95.231.88;
 deny 93.99.104.128;
