--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -139,6 +139,7 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
