--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -225,7 +225,6 @@ deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.58.100.98;
 deny 176.58.121.177;
-deny 176.65.134.61;
 deny 176.65.143.138;
 deny 176.65.144.142;
 deny 176.65.144.94;
@@ -656,7 +655,6 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
-deny 193.218.118.188;
 deny 193.218.118.56;
 deny 193.218.118.72;
 deny 193.218.118.89;
@@ -832,7 +830,6 @@ deny 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 deny 2001:bf0:666::666;
 deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-deny 20.197.32.76;
 deny 202.182.99.129;
 deny 204.137.14.104;
 deny 204.137.14.105;
@@ -1342,6 +1339,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1651,7 +1649,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
@@ -1661,6 +1658,7 @@ deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
+deny 2a10:1fc0:10::ce18:9bf9;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1857,6 +1855,7 @@ deny 51.89.136.168;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1937,6 +1936,7 @@ deny 84.239.46.144;
 deny 84.247.183.128;
 deny 84.252.120.131;
 deny 85.239.41.130;
+deny 85.239.55.172;
 deny 85.93.218.204;
 deny 86.107.101.115;
 deny 86.107.101.122;
