--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -420,6 +420,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -729,7 +730,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:8605:d341:b954:fc51;
 deny 2a0f:e586:f:f:9405:a52b:796f:aff2;
 deny 2a0f:e586:f:f:9dd4:5bf6:2230:ae55;
@@ -739,6 +739,7 @@ deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:e356:1bda:fc05:6784;
+deny 2a10:1fc0:10::ce18:9bf9;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
