--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -976,7 +976,6 @@ allow 23.133.204.10;
 allow 23.137.248.100;
 allow 23.137.248.192;
 allow 23.137.250.83;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
@@ -1061,7 +1060,6 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fef9:100:1100::199;
@@ -1587,6 +1585,7 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1739,6 +1738,7 @@ allow 45.130.60.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.99.10;
+allow 45.137.99.14;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
