--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -161,7 +161,6 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 152.32.199.79;
 set_real_ip_from 152.53.133.14;
 set_real_ip_from 152.53.53.243;
-set_real_ip_from 153.195.197.73;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.41.95.1;
@@ -674,6 +673,7 @@ set_real_ip_from 194.163.130.99;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -721,7 +721,6 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
-set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
@@ -976,6 +975,7 @@ set_real_ip_from 23.133.204.10;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
 set_real_ip_from 23.137.250.83;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
@@ -1060,6 +1060,7 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:18:a378::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
 set_real_ip_from 2602:fc24:18:f84a::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fef9:100:1100::199;
@@ -1338,7 +1339,6 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
@@ -1584,6 +1584,7 @@ set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:8140:1fff:22d0::1;
 set_real_ip_from 2a0d:8140:1fff:395e::1;
+set_real_ip_from 2a0d:8140:1fff:4a9a::1;
 set_real_ip_from 2a0d:bbc7:0:1::10a;
 set_real_ip_from 2a0d:bbc7:0:1::1df;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1659,6 +1660,7 @@ set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
 set_real_ip_from 2a12:a800:1:1:2:58:56:233;
@@ -1683,7 +1685,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
-set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:133;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
@@ -1698,7 +1699,6 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
-set_real_ip_from 2a12:a800:2:1:45:141:215:81;
 set_real_ip_from 2a12:a800:2:1:45:141:215:88;
 set_real_ip_from 2a12:a800:2:1:45:141:215:90;
 set_real_ip_from 2a12:a800:2:1:45:141:215:95;
@@ -1735,6 +1735,7 @@ set_real_ip_from 45.130.60.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.99.10;
+set_real_ip_from 45.137.99.14;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1749,7 +1750,6 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.138.87.142;
 set_real_ip_from 45.141.215.110;
-set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.133;
 set_real_ip_from 45.141.215.167;
@@ -1764,7 +1764,6 @@ set_real_ip_from 45.141.215.61;
 set_real_ip_from 45.141.215.62;
 set_real_ip_from 45.141.215.63;
 set_real_ip_from 45.141.215.80;
-set_real_ip_from 45.141.215.81;
 set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
@@ -1850,7 +1849,6 @@ set_real_ip_from 51.89.136.168;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -1937,7 +1935,6 @@ set_real_ip_from 86.54.28.49;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.12;
-set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
 set_real_ip_from 87.120.254.132;
