Update lists at 20250323-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -104,7 +104,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.172.84.107;
 allow 109.199.101.106;
 allow 109.199.101.134;
 allow 109.199.105.142;
@@ -154,6 +153,7 @@ allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
+allow 147.93.72.55;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
@@ -672,7 +672,6 @@ allow 194.15.115.212;
 allow 194.163.130.99;
 allow 194.163.157.49;
 allow 194.26.192.77;
-allow 194.53.137.156;
 allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
@@ -1285,6 +1284,7 @@ allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4780:c:b915::1;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1603,7 +1603,6 @@ allow 2a0d:bbc7:0:1::3cc;
 allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
-allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
