--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -104,7 +104,6 @@ deny 108.59.12.3;
 deny 108.61.189.136;
 deny 109.104.153.22;
 deny 109.169.33.163;
-deny 109.172.84.107;
 deny 109.199.101.106;
 deny 109.199.101.134;
 deny 109.199.105.142;
@@ -154,6 +153,7 @@ deny 144.172.118.73;
 deny 146.59.126.232;
 deny 146.59.231.4;
 deny 147.45.116.145;
+deny 147.93.72.55;
 deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.22.133;
@@ -672,7 +672,6 @@ deny 194.15.115.212;
 deny 194.163.130.99;
 deny 194.163.157.49;
 deny 194.26.192.77;
-deny 194.53.137.156;
 deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
@@ -1285,6 +1284,7 @@ deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:4780:c:b915::1;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
@@ -1603,7 +1603,6 @@ deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
-deny 2a0e:1d80:13:51e8::1;
 deny 2a0e:1d80:17:6f8d::1;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
 deny 2a0e:4005:1002:ffff:185:40:4:101;
