Update lists at 20250324-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -177,6 +177,7 @@ allow 161.97.71.11;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -1066,6 +1067,7 @@ allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::53c8;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
@@ -1659,7 +1661,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:e356:1bda:fc05:6784;
 allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::ce18:9bf9;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1930,7 +1931,6 @@ allow 84.239.46.144;
 allow 84.247.183.128;
 allow 84.252.120.131;
 allow 85.239.41.130;
-allow 85.239.55.172;
 allow 85.93.218.204;
 allow 86.107.101.115;
 allow 86.107.101.122;
