--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -177,6 +177,7 @@ set_real_ip_from 161.97.71.11;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -1066,6 +1067,7 @@ set_real_ip_from 2602:fc24:18:f84a::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::53c8;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
@@ -1659,7 +1661,6 @@ set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a0f:e586:f:f:e356:1bda:fc05:6784;
 set_real_ip_from 2a10:1fc0:10::a63c:724c;
-set_real_ip_from 2a10:1fc0:10::ce18:9bf9;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1930,7 +1931,6 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.183.128;
 set_real_ip_from 84.252.120.131;
 set_real_ip_from 85.239.41.130;
-set_real_ip_from 85.239.55.172;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.107.101.115;
 set_real_ip_from 86.107.101.122;
