Update lists at 20250324-1801

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -229,8 +229,6 @@ deny 176.121.81.51;
 deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.143.138;
-deny 176.65.144.142;
-deny 176.65.144.94;
 deny 176.97.114.202;
 deny 177.149.155.173;
 deny 178.162.175.5;
@@ -697,7 +695,7 @@ deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.144.178.185;
 deny 198.144.178.187;
-deny 198.167.206.133;
+deny 198.167.206.157;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -710,7 +708,6 @@ deny 198.98.48.33;
 deny 198.98.48.35;
 deny 198.98.50.199;
 deny 198.98.51.189;
-deny 198.98.51.249;
 deny 198.98.54.49;
 deny 198.98.57.151;
 deny 198.98.57.74;
@@ -979,7 +976,6 @@ deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
 deny 217.199.199.250;
-deny 23.133.204.10;
 deny 23.137.248.100;
 deny 23.137.248.192;
 deny 23.137.250.83;
@@ -990,7 +986,6 @@ deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
 deny 23.155.8.104;
-deny 23.184.48.13;
 deny 23.184.48.254;
 deny 23.184.48.78;
 deny 23.191.200.10;
@@ -1058,14 +1053,12 @@ deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
-deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:524::1;
@@ -1079,7 +1072,6 @@ deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:1362::2;
-deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1262,6 +1254,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1284,6 +1277,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1592,7 +1586,6 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1605,6 +1598,7 @@ deny 2a0d:bbc7:0:1::394;
 deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
+deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:17:6f8d::1;
@@ -1714,6 +1708,7 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:9:1:193:26:115:161;
 deny 2a13:d207:0:461::1;
+deny 2c0f:6c0:0:2::6983;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
@@ -1742,7 +1737,6 @@ deny 45.130.60.248;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.99.10;
-deny 45.137.99.14;
 deny 45.137.99.216;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1808,6 +1802,7 @@ deny 45.84.107.198;
 deny 45.84.107.222;
 deny 45.84.107.33;
 deny 45.84.107.47;
+deny 45.84.107.54;
 deny 45.84.107.55;
 deny 45.84.107.74;
 deny 45.84.107.76;
@@ -1823,6 +1818,7 @@ deny 45.95.169.230;
 deny 45.95.169.24;
 deny 45.95.169.255;
 deny 46.165.243.36;
+deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1920,6 +1916,7 @@ deny 81.17.28.95;
 deny 81.181.104.22;
 deny 8.208.26.177;
 deny 8.209.106.19;
+deny 82.118.248.205;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
@@ -1942,6 +1939,7 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.254.132;
 deny 88.151.117.146;
 deny 88.80.20.86;
 deny 88.80.26.2;
