--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -135,14 +135,12 @@ deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
-deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:18:a378::1;
 deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:524::1;
@@ -156,7 +154,6 @@ deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:1362::2;
-deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -338,6 +335,7 @@ deny 2800:ba0:6:c1::4858;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -360,6 +358,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe64:90e3;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -668,7 +667,6 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
-deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -681,6 +679,7 @@ deny 2a0d:bbc7:0:1::394;
 deny 2a0d:bbc7:0:1::3bd;
 deny 2a0d:bbc7:0:1::3cc;
 deny 2a0d:bbc7:0:1::3d5;
+deny 2a0d:bbc7:0:1::50;
 deny 2a0d:bbc7:0:1::7f;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:1d80:17:6f8d::1;
@@ -790,3 +789,4 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:9:1:193:26:115:161;
 deny 2a13:d207:0:461::1;
+deny 2c0f:6c0:0:2::6983;
