--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -96,6 +96,7 @@ allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
+allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.59.12.3;
 allow 108.61.189.136;
@@ -1715,6 +1716,7 @@ allow 2a12:a800:2:1:45:80:158:69;
 allow 2a12:a800:9:1:193:26:115:161;
 allow 2a13:d207:0:461::1;
 allow 2c0f:6c0:0:2::6983;
+allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
