--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -796,3 +796,4 @@ deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:9:1:193:26:115:161;
 deny 2a13:d207:0:461::1;
 deny 2c0f:6c0:0:2::6983;
+deny 2c0f:6c0:0:3::479d;
